<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".WarrantyView$PlaceholderFragment">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/app_name"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFF"
        android:src="@drawable/seven_ci_bw" />

    <View
        android:layout_width="match_parent"
        android:layout_height="8dp"
        android:background="@drawable/dropshadow" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/flash"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/no_connection"
            android:visibility="visible" />

        <LinearLayout
            android:id="@+id/warranty_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/warranty_description"
                style="@style/WarrantyDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/warranty_sample_description" />

            <TextView
                android:id="@+id/warranty_end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/warranty_sample_expiration" />

            <TextView
                android:id="@+id/registration_status"
                style="@style/ScannerUnregistered"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/registration_status_unregistered"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
